Added footer style changes

--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
         </main>
 
         <footer>
-            <p>Practice page made by [Your Name]. All rights reserved.</p>
+            <p>Practice page made by Tanelle Lavallee. All rights reserved.</p>
         </footer>
     </body>
 </html>
